# white

./: .coverage  .gitignore  .pre-commit-config.yaml  =3.0.0  BUGFIX_SUMMARY.md  CLAUDE.md  COLLABORATIVE_INTELLIGENCE_LICENSE.md  MCP_SETUP.md  MCP_TOOLS_REFERENCE.md  README.md  SONG_GENERATION_PROCESS.md  YELLOW_AGENT_VERTICAL_SLICE.md  alembic.ini  check_status.py  check_white_agent_status.py  clarity.md  claude_desktop_config.template.json  conftest.py  coverage.json  example.env  install_mcp_config.sh  lyric_feedback.jsonl  main.py  mcp_tools_reference.md  midi_note_summary.json  paused_state.pkl  preambles.py  project_diary.md  pyproject.toml  pytest.ini  rainbow_table_reference.md  requirements.txt  run_white_agent.py  sitecustomize.py  test_write.txt  white_album_project_diary.md  white_aliases.sh
checkpoints/: black_agent.db
claude_the_progressive/: QUICKSTART.md  README_progression_selector.md  integration_example.py  progression_selector.py  test_progression_selector.py
claudes song ideas/: orange_frequency_ghost_session.md  tangier_rebracketing_exercise.md
db/: white.sqlite
docs/: COMPLETE_FIX_GUIDE.md  FINAL_STATUS_REPORT.txt  FIX_DICT_STATE_ISSUE.md  GETTING_STARTED.md  PREFLIGHT_CHECKLIST.md  QUICK_FIX_SUMMARY.md  QUICK_REFERENCE.txt  RESUME_WORKFLOW_FIX.md  WHITE_AGENT_USAGE.md  WORKFLOW_SUMMARY.md  plan_template.yml  raw_manifest_template.yml
examples/: html_artifact_examples.py  timestamp_extraction_example.py  white_agent_usage.py
migrations/: env.py
openspec/: AGENTS.md  FUTURE_IDEAS.md  project.md
scripts/: analyze_midi_notes.py  batch_validate_concepts.py  chords_minmax.py  chords_minmax_result.py  cleanup_evp_intermediates.py  demo_yellow_agent_vertical_slice.py
shrink_wrapped/: index.yml  negative_constraints.yml  used_templates.json
shrinkwrapped/: index.yml  negative_constraints.yml
tests/: conftest.py  test_no_aifc_warnings.py  test_shrinkwrap_chain_artifacts.py  test_state_conversion.py
tmp_artifacts/: test_20251027T123043Z.md
training/: .dockerignore  .gitignore  Dockerfile.runpod  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  build_sounds_like_embeddings.py  chromatic_scorer.py  config.yml  config_multiclass.yml  config_multilabel.yml  config_regression.yml  deployment.md  export_onnx.py  extract_cdm_embeddings.py  hf_dataset_prep.py  interpretability_analysis.ipynb  modal_clap_extraction.py  modal_embedding_extraction.py  modal_midi_fusion.py  modal_stable_audio_spike.py  modal_train_refractor_cdm.py  phase4_train_regression.py  push_to_hub_fixed.py  refractor.py  requirements.txt  runpod_train.py  runpod_training.ipynb  setup.sh  test_setup.py  train.py  (+6 more)
(+5163 files in other folders)
