[project]
name = "white"
version = "0.1.0"
description = "System for creation of White album in The Rainbow Table"
requires-python = ">=3.13"
dependencies = [
    "discogs-client>=2.3.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
    "mido>=1.3.3",
    "python3-discogs-client>=2.8",
    "pyyaml>=6.0.2",
]
