[tool.setuptools]
packages = ["app", "staged_raw_material"]

[project]
name = "white"
version = "0.1.0"
description = "System for creation of White album in The Rainbow Table"
requires-python = ">=3.11"
dependencies = [
    "discogs-client>=2.3.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "mido>=1.3.3",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250827",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "python3-discogs-client>=2.8",
    "pyyaml>=6.0.2",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "anthropic>=0.34.0",
    "ipython>=9.5.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.12.1",
    "scipy-stubs==1.16.2.0",
    "scipy>=1.16.1",
    "assemblyai>=0.46.0",
    "pytest-cov>=7.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.14.3",
    "black>=25.9.0",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "internetarchive>=5.7.1",
    "polars>=1.35.2",
    "neo4j~=5.28.0",
    "fastmcp>=2.13.0.2",
    "pillow>=12.0.0",
    "stegano>=0.9.7",
    "pyttsx3>=2.99",
    "pydub>=0.25.1",
]
